Added stability pom.xml